--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Helium - Bootstrap 4 Onepage Template</title>
+    <title>Curriculum Models</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" >
@@ -163,8 +163,7 @@
                   <div class="carousel-item">
                     <img src="img/slider/bg-2.jpg" alt="">
                     <div class="carousel-caption">
-                      <h3 class="slide-title animated fadeInDown"><span>Cutting-edge</span> Features</h3>
-                      <h5 class="slide-text animated fadeIn">Lorem ipsum dolor sit amet, consectetuer adipiscing elit<br> Curabitur ultricies nisi Nam eget dui. Etiam rhoncus</h5>
+                      <h3 class="slide-title animated fadeInDown"><span>Waldorf Education</span> Harmony and the Whole Child</h3>
                       <a href="#" class="btn btn-lg btn-common animated fadeInUp">Get Started</a>
                       <a href="#" class="btn btn-lg btn-border animated fadeInUp">Learn More</a>
                     </div>
