--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <span class="icon-menu"></span>
               <span class="icon-menu"></span>
             </button>
-            <a href="index.html" class="navbar-brand"><img src="img/logo.png" alt=""></a>
+            <a href="index.html" class="navbar-brand"><img src="" alt=""></a>
           </div>
           <div class="collapse navbar-collapse" id="main-navbar">
             <ul class="navbar-nav mr-auto w-100 justify-content-end clearfix">
@@ -243,7 +243,7 @@
                 <i class="fa fa-cogs"></i>
               </div>
               <div class="service-content">
-                <h4><a href="#">Reggio Emilia Approach</a></h4>
+                <h4><a href="/reggio Emila.html">Reggio Emilia Approach</a></h4>
                 <p>
                     The Reggio Emilia approach is an instructive reasoning centering on preschool and essential instruction
                 </p>
@@ -253,7 +253,7 @@
           <!-- End Service Icon 1 -->
 
           <!-- Start Service Icon 2 -->
-          <div class="col-md-6 col-lg-4 col-xs-12">
+          <!-- <div class="col-md-6 col-lg-4 col-xs-12">
             <div class="service-box">
               <div class="service-icon">
                 <i class="fa fa-cubes"></i>
@@ -265,7 +265,7 @@
                 </p>
               </div>
             </div>
-          </div>
+          </div> -->
           <!-- End Service Icon 2 -->
 
           <!-- Start Service Icon 3 -->
@@ -275,7 +275,7 @@
                 <i class="fa fa-tachometer"></i>
               </div>
               <div class="service-content">
-                <h4><a href="#">Waldorf Education</a></h4>
+                <h4><a href="/waldorf.html">Waldorf Education</a></h4>
                 <p>
                   Waldorf Education was established by Austrian born, Rudolf Steiner, who was a teacher, researcher and logician                </p>
               </div>
