--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                 <i class="fa fa-cogs"></i>
               </div>
               <div class="service-content">
-                <h4><a href="/reggio Emila.html">Reggio Emilia Approach</a></h4>
+                <h4><a href="https://atexzonate.github.io/Curriculum-/reggioEmila.html">Reggio Emilia Approach</a></h4>
                 <p>
                     The Reggio Emilia approach is an instructive reasoning centering on preschool and essential instruction
                 </p>
@@ -275,7 +275,7 @@
                 <i class="fa fa-tachometer"></i>
               </div>
               <div class="service-content">
-                <h4><a href="/waldorf.html">Waldorf Education</a></h4>
+                <h4><a href="https://atexzonate.github.io/Curriculum-/waldorf.html">Waldorf Education</a></h4>
                 <p>
                   Waldorf Education was established by Austrian born, Rudolf Steiner, who was a teacher, researcher and logician                </p>
               </div>
@@ -290,7 +290,7 @@
                 <i class="fa fa-check"></i>
               </div>
               <div class="service-content">
-                <h4><a href="#">Montessori Education</a></h4>
+                <h4><a href="https://atexzonate.github.io/Curriculum-/Montessori.html">Montessori Education</a></h4>
                 <p>
                   The Montessori classroom is ready with materials chosen and outlined to meet the wants of each person child.                </p>
               </div>
@@ -305,7 +305,7 @@
                 <i class="fa fa-flash"></i>
               </div>
               <div class="service-content">
-                <h4><a href="#">The Project Approach</a></h4>
+                <h4><a href="https://atexzonate.github.io/Curriculum-/project.html">The Project Approach</a></h4>
                 <p>
                   The Project Approach could be a child-centered approach to arranging and organizing a wide run of learning exercises                </p>
               </div>
@@ -320,7 +320,7 @@
                 <i class="fa fa-hand-pointer-o"></i>
               </div>
               <div class="service-content">
-                <h4><a href="#">Personal Philosophy</a></h4>
+                <h4><a href="https://atexzonate.github.io/Curriculum-/project.html">Personal Philosophy</a></h4>
                 <p>
                   I accept that each student is distinctive with a way of learning and possess a set of needs and endowments that are brought to the classroom.                </p>
               </div>
