--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                 <i class="fa fa-check"></i>
               </div>
               <div class="service-content">
-                <h4><a href="https://atexzonate.github.io/Curriculum-/Montessori.html">Montessori Education</a></h4>
+                <h4><a href="https://atexzonate.github.io/Curriculum-/montessori.html">Montessori Education</a></h4>
                 <p>
                   The Montessori classroom is ready with materials chosen and outlined to meet the wants of each person child.                </p>
               </div>
@@ -320,7 +320,7 @@
                 <i class="fa fa-hand-pointer-o"></i>
               </div>
               <div class="service-content">
-                <h4><a href="https://atexzonate.github.io/Curriculum-/project.html">Personal Philosophy</a></h4>
+                <h4><a href="https://atexzonate.github.io/Curriculum-/Personal.html">Personal Philosophy</a></h4>
                 <p>
                   I accept that each student is distinctive with a way of learning and possess a set of needs and endowments that are brought to the classroom.                </p>
               </div>
@@ -510,139 +510,6 @@
       <!-- Container Ends -->
     </section>
     <!-- Portfolio Section Ends -->
-
-     <!-- Feature Section Start -->
-    <!-- <div id="feature" class="section-padding">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <h2 class="section-title wow fadeInDown animated" data-wow-delay="0.3s">Features</h2>
-          </div>
-        </div>
-        <div class="row"> -->
-          <!-- Start featured -->
-          <!-- <div class="col-lg-4 col-md-6 col-xs-12">
-            <div class="featured-box-item">
-              <div class="featured-icon">
-                <i class="fa fa-bolt"></i>
-              </div>
-              <div class="featured-content">
-                <h4>Bootstrap 4</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et magna aliqua.</p>
-              </div>
-            </div>
-          </div> -->
-          <!-- End featured -->
-          
-          <!-- Start featured -->
-          <!-- <div class="col-lg-4 col-md-6 col-xs-12">
-            <div class="featured-box-item">
-              <div class="featured-icon">
-                <i class="fa fa-diamond"></i>
-              </div>
-              <div class="featured-content">
-                <h4>Clean Design</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et magna aliqua.</p>
-              </div>
-            </div>
-          </div> -->
-          <!-- End featured -->
-
-          <!-- Start featured -->
-          <!-- <div class="col-lg-4 col-md-6 col-xs-12">
-            <div class="featured-box-item">
-              <div class="featured-icon">
-                <i class="fa fa-cubes"></i>
-              </div>
-              <div class="featured-content">
-                <h4>100+ Components</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et magna aliqua.</p>
-              </div>
-            </div>
-          </div> -->
-          <!-- End featured -->
-
-          <!-- Start featured -->
-          <!-- <div class="col-lg-4 col-md-6 col-xs-12">
-            <div class="featured-box-item">
-              <div class="featured-icon">
-                <i class="fa fa-cogs"></i>
-              </div>
-              <div class="featured-content">
-                <h4>Easy to Customize</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et magna aliqua.</p>
-              </div>
-            </div>
-          </div> -->
-          <!-- End featured -->
-
-          <!-- Start featured -->
-          <!-- <div class="col-lg-4 col-md-6 col-xs-12">
-            <div class="featured-box-item">
-              <div class="featured-icon">
-                <i class="fa fa-check"></i>
-              </div>
-              <div class="featured-content">
-                <h4>Pixel Perfect</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et magna aliqua.</p>
-              </div>
-            </div>
-          </div> -->
-          <!-- End featured -->
-
-          <!-- Start featured -->
-          <!-- <div class="col-lg-4 col-md-6 col-xs-12">
-            <div class="featured-box-item">
-              <div class="featured-icon">
-                <i class="fa fa-cloud"></i>
-              </div>
-              <div class="featured-content">
-                <h4>Cloud Backup</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et magna aliqua.</p>
-              </div>
-            </div>
-          </div> -->
-          <!-- End featured -->
-        <!-- </div>
-      </div>
-    </div> -->
-    <!-- Feature Section End -->
-
-    <!-- facts Section Start -->
-    <!-- <div id="counter">
-      <div class="container">
-        <div class="row count-to-sec">
-          <div class="col-lg-3 col-md-6 col-xs-12 count-one">
-            <span class="icon"><i class="fa fa-download"> </i></span>
-            <h3 class="timer count-value" data-to="561" data-speed="1000">561</h3>
-            <hr class="width25-divider">
-            <small class="count-title">Downloads</small>
-          </div>
-
-          <div class="col-lg-3 col-md-6 col-xs-12 count-one">
-            <span class="icon"><i class="fa fa-user"> </i></span>
-            <h3 class="timer count-value" data-to="950" data-speed="1000">950</h3>
-            <hr class="width25-divider">
-            <small class="count-title">Developers</small>
-          </div>
-
-          <div class="col-lg-3 col-md-6 col-xs-12 count-one">
-            <span class="icon"><i class="fa fa-desktop"> </i></span>
-            <h3 class="timer count-value" data-to="978" data-speed="1000">978</h3>
-            <hr class="width25-divider">
-            <small class="count-title">Lines of code written</small>
-          </div>
-
-          <div class="col-lg-3 col-md-6 col-xs-12 count-one">
-            <span class="icon"><i class="fa fa-coffee"> </i></span>
-            <h3 class="timer count-value" data-to="1700" data-speed="1000">1700</h3>
-            <hr class="width25-divider">
-            <small class="count-title">Cups of coffee consumed</small>
-          </div>
-        </div>
-      </div>
-    </div> -->
-    <!-- facts Section End -->
     
     <!-- Team Section Start -->
     <div id="team" class="team-members-tow section-padding">
@@ -721,156 +588,6 @@
       </div>
     </div>
     <!-- Team Section End -->
-
-    <!-- Pricing section Start --> 
-    <!-- <section id="pricing" class="section-padding">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <h2 class="section-title wow fadeInDown animated" data-wow-delay="0.3s">Pricing Table</h2>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-4 col-md-6 col-xs-12">
-            <div class="pricing-table-item">
-              <div class="plan-name">
-                <h3>Basic</h3>
-              </div>
-              <div class="plan-price">
-                <div class="price-value">$ 10</div>
-                <div class="interval">per month</div>
-              </div>
-              <div class="plan-list">
-                <ul>
-                  <li><i class="fa fa-check"></i>2GB Disk Space</li>
-                  <li><i class="fa fa-check"></i>3 Sub Domains</li>
-                  <li><i class="fa fa-check"></i>12 Database</li>
-                  <li><i class="fa fa-check"></i>Unlimited Users</li>
-                </ul>
-              </div>
-              <div class="plan-signup">
-                <a href="#" class="btn btn-common">Get Started</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 col-xs-12">
-            <div class="pricing-table-item table-active">
-              <div class="plan-name">
-                <h3>Premium</h3>
-              </div>
-              <div class="plan-price">
-                <div class="price-value">$ 69 </div>
-                <div class="interval">per month</div>
-              </div>
-              <div class="plan-list">
-                <ul>
-                  <li><i class="fa fa-check"></i>10GB Disk Space</li>
-                  <li><i class="fa fa-check"></i>5 Sub Domains</li>
-                  <li><i class="fa fa-check"></i>12 Database</li>
-                  <li><i class="fa fa-check"></i>Unlimited Users</li>
-                </ul>
-              </div>
-              <div class="plan-signup">
-                <a href="#" class="btn btn-common">Get Started</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 col-xs-12">
-            <div class="pricing-table-item">
-              <div class="plan-name">
-                <h3>Unltimate</h3>
-              </div>
-              <div class="plan-price">
-                <div class="price-value">$ 79 </div>
-                <div class="interval">per month</div>
-              </div>
-              <div class="plan-list">
-                <ul>
-                  <li><i class="fa fa-check"></i>50GB Disk Space</li>
-                  <li><i class="fa fa-check"></i>20 Sub Domains</li>
-                  <li><i class="fa fa-check"></i>36 Database</li>
-                  <li><i class="fa fa-check"></i>Unlimited Users</li>
-                </ul>
-              </div>
-              <div class="plan-signup">
-                <a href="#" class="btn btn-common">Get Started</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
-    <!-- Pricing Table Section End -->
-
-    <!-- Single testimonial Start -->
-    <!-- <div class="single-testimonial-area">
-      <div class="container">
-        <div id="single-testimonial-item" class="owl-carousel"> -->
-          <!-- Single testimonial Item -->
-          <!-- <div class="item">
-            <div class="row justify-content-md-center">
-              <div class="col-lg-8 col-md-12 col-xs-12 col-md-auto">
-                <div class="testimonial-inner text-md-center">
-                  <blockquote>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id ipsam, non ut molestiae rerum praesentium repellat debitis iure reiciendis, eius culpa beatae commodi facere ad numquam. Quisquam dignissimos similique sunt iure fugit, omnis vel cupiditate repellendus magni nihil molestiae quam, delectus
-                  </blockquote>
-                  <div class="testimonial-images">
-                    <img class="img-circle text-md-center" src="img/testimonial/img1.jpg" alt="">
-                  </div>
-                  <div class="testimonial-footer">
-                    <i class="fa fa-user"></i> Arman
-                    <a href="#"> UIdeck</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div> -->
-
-          <!-- Single testimonial Item -->
-          <!-- <div class="item">
-            <div class="row justify-content-md-center">
-              <div class="col-lg-8 col-md-12 col-xs-12 col-md-auto">
-                <div class="testimonial-inner text-md-center">
-                  <blockquote>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id ipsam, non ut molestiae rerum praesentium repellat debitis iure reiciendis, eius culpa beatae commodi facere ad numquam. Quisquam dignissimos similique sunt iure fugit, omnis vel cupiditate repellendus magni nihil molestiae quam, delectus
-                  </blockquote>
-                  <div class="testimonial-images">
-                    <img class="img-circle text-md-center" src="img/testimonial/img2.jpg" alt="">
-                  </div>
-                  <div class="testimonial-footer">
-                    <i class="fa fa-user"></i> Jeniffer
-                    <a href="#"> GrayGrids</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div> -->
-
-          <!-- Single testimonial Item -->
-          <!-- <div class="item">
-            <div class="row justify-content-md-center">
-              <div class="col-lg-8 col-md-12 col-xs-12 col-md-auto">
-                <div class="testimonial-inner text-md-center">
-                  <blockquote>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id ipsam, non ut molestiae rerum praesentium repellat debitis iure reiciendis, eius culpa beatae commodi facere ad numquam. Quisquam dignissimos similique sunt iure fugit, omnis vel cupiditate repellendus magni nihil molestiae quam, delectus
-                  </blockquote>
-                  <div class="testimonial-images">
-                    <img class="img-circle text-md-center" src="img/testimonial/img3.jpg" alt="">
-                  </div>
-                  <div class="testimonial-footer">
-                    <i class="fa fa-user"></i> Elon Musk<a href="#"> Tesla</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
-    <!-- end -->
-
     <!-- Contact Form Section Start -->
     <section id="contact" class="contact-form section-padding">
       <div class="container">
