--- a/project.html
+++ b/project.html
@@ -51,7 +51,7 @@
                 <div class="collapse navbar-collapse" id="main-navbar">
                     <ul class="navbar-nav mr-auto w-100 justify-content-end clearfix">
                         <li class="nav-item">
-                            <a class="nav-link" href="#sliders">
+                            <a class="nav-link" href="https://atexzonate.github.io/Curriculum-/">
                                 Home
                             </a>
                         </li>
@@ -97,7 +97,7 @@
             <!-- Mobile Menu Start -->
             <ul class="mobile-menu navbar-nav">
                 <li>
-                    <a class="page-scroll" href="#sliders">
+                    <a class="page-scroll" href="https://atexzonate.github.io/Curriculum-/">
                         Home
                     </a>
                 </li>
