--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                 <i class="fa fa-hand-pointer-o"></i>
               </div>
               <div class="service-content">
-                <h4><a href="https://atexzonate.github.io/Curriculum-/Personal.html">Personal Philosophy</a></h4>
+                <h4><a href="https://atexzonate.github.io/Curriculum-/personal.html">Personal Philosophy</a></h4>
                 <p>
                   I accept that each student is distinctive with a way of learning and possess a set of needs and endowments that are brought to the classroom.                </p>
               </div>
