transfer to Mabel

--- a/montessori.html
+++ b/montessori.html
@@ -35,7 +35,7 @@
     <!-- Header Area wrapper Starts -->
     <header id="header-wrap">
         <!-- Navbar Start -->
-        <nav class="navbar navbar-expand-lg fixed-top scrolling-navbar indigo">
+        <nav class="navbar navbar-expand-lg fixed-top scrolling-navbar bg-dark">
             <div class="container">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
@@ -51,43 +51,8 @@
                 <div class="collapse navbar-collapse" id="main-navbar">
                     <ul class="navbar-nav mr-auto w-100 justify-content-end clearfix">
                         <li class="nav-item">
-                            <a class="nav-link" href="https://atexzonate.github.io/Curriculum-/">
+                            <a class="nav-link" href="/index.html">
                                 Home
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#about">
-                                About
-                            </a>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#services">
-                                Approach
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#portfolio">
-                                Portfolio
-                            </a>
-                        </li>
-                        <!-- <li class="nav-item">
-                            <a class="nav-link" href="#feature">
-                                Features
-                            </a>
-                            </li> -->
-                        <li class="nav-item">
-                            <a class="nav-link" href="#team">
-                                Team
-                            </a>
-                        </li>
-                        <!-- <li class="nav-item">
-                            <a class="nav-link" href="#pricing">
-                                Pricing
-                            </a>
-                            </li> -->
-                        <li class="nav-item">
-                            <a class="nav-link" href="#contact">
-                                Contact
                             </a>
                         </li>
                     </ul>
@@ -97,45 +62,11 @@
             <!-- Mobile Menu Start -->
             <ul class="mobile-menu navbar-nav">
                 <li>
-                    <a class="page-scroll" href="https://atexzonate.github.io/Curriculum-/iders">
+                    <a class="page-scroll" href="/index.html">
                         Home
                     </a>
                 </li>
-                <li>
-                    <a class="page-scroll" href="#about">
-                        About
-                    </a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="#services">
-                        Approach
-                    </a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="#portfolio">
-                        Portfolio
-                    </a>
-                </li>
-                <!-- <li>
-                        <a class="page-scroll" href="#feature">
-                            Features
-                        </a>
-                        </li> -->
-                <li>
-                    <a class="page-scroll" href="#team">
-                        Team
-                    </a>
-                </li>
-                <!-- <li>
-                        <a class="page-scroll" href="#pricing">
-                            Pricing
-                        </a>
-                        </li> -->
-                <li>
-                    <a class="page-scroll" href="#contact">
-                        Contact
-                    </a>
-                </li>
+                
             </ul>
             <!-- Mobile Menu End -->
 
@@ -305,114 +236,107 @@
     <!-- About Section End -->
 
 
-    <!-- Footer Section -->
-    <footer class="footer">
+	  <!-- Footer Section -->
+      <footer class="footer">
         <!-- Container Starts -->
         <div class="container">
-            <!-- Row Starts -->
-            <div class="row section">
-                <!-- Footer Widget Starts -->
-                <div class="footer-widget col-lg-3 col-md-6 col-xs-12 wow fadeIn">
-                    <h3 class="small-title">
-                        About Us
-                    </h3>
-                    <p>
-                        This Assessment is own by Mabel
-                    </p>
-                    <div class="social-footer">
-                        <a href="#"><i class="fa fa-facebook icon-round"></i></a>
-                        <a href="#"><i class="fa fa-twitter icon-round"></i></a>
-                        <a href="#"><i class="fa fa-linkedin icon-round"></i></a>
-                        <a href="#"><i class="fa fa-google-plus icon-round"></i></a>
-                    </div>
-                </div>
-                <!-- Footer Widget Ends -->
-
-                <!-- Footer Widget Starts -->
-                <div class="footer-widget col-lg-3 col-md-6 col-xs-12 wow fadeIn" data-wow-delay=".2s">
-                    <h3 class="small-title">
-                        Links
-                    </h3>
-                    <ul class="menu">
-                        <li><a href="/index.html">About</a></li>
-                        <li><a href="/index.html">Approach</a></li>
-                        <li><a href="/index.html">Works</a></li>
-                        <li><a href="/index.html">Portfolio</a></li>
-                        <li><a href="/index.html">Contact</a></li>
-                    </ul>
-                </div>
-                <!-- Footer Widget Ends -->
-
-                <!-- Footer Widget Starts -->
-                <div class="footer-widget col-lg-3 col-md-6 col-xs-12 wow fadeIn" data-wow-delay=".5s">
-                    <h3 class="small-title">
-                        GALLERY
-                    </h3>
-                    <div class="plain-flicker-gallery">
-                        <a href="#"><img src="img/flicker/img1.jpeg" alt=""></a>
-                        <a href="#"><img src="img/flicker/img2.jpeg" alt=""></a>
-                        <a href="#"><img src="img/flicker/img3.jpeg" alt=""></a>
-                        <a href="#"><img src="img/flicker/img4.jpeg" alt=""></a>
-                        <a href="#"><img src="img/flicker/img5.jpg" alt=""></a>
-                        <a href="#"><img src="img/flicker/img6.jpeg" alt=""></a>
-                    </div>
-                </div>
-                <!-- Footer Widget Ends -->
-
-                <!-- Footer Widget Starts -->
-                <div class="footer-widget col-lg-3 col-md-6 col-xs-12 wow fadeIn" data-wow-delay=".8s">
-                    <h3 class="small-title">
-                        SUBSCRIBE US
-                    </h3>
-                    <div class="contact-us">
-                        <form>
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="exampleInputName2" placeholder="Enter your name">
-                            </div>
-                            <div class="form-group">
-                                <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Enter your email">
-                            </div>
-                            <button type="submit" class="btn btn-common">Submit</button>
-                        </form>
-                    </div>
-                </div>
-                <!-- Footer Widget Ends -->
+          <!-- Row Starts -->
+          <div class="row section">
+            <!-- Footer Widget Starts -->
+            <div class="footer-widget col-lg-4 col-md-6 col-xs-12 wow fadeIn">
+              <h3 class="small-title">
+                About Us
+              </h3>
+              <p>
+                Mable Olateju agrees that learning will be a strategy and she will utilise in my classroom. This assessment is owned by her
+              </p>
+              <div class="social-footer">
+                <a href="#"><i class="fa fa-facebook icon-round"></i></a>
+                <a href="#"><i class="fa fa-twitter icon-round"></i></a>
+                <a href="#"><i class="fa fa-linkedin icon-round"></i></a>
+                <a href="#"><i class="fa fa-google-plus icon-round"></i></a>
+              </div>
             </div>
-            <!-- Row Ends -->
+            <!-- Footer Widget Ends -->
+  
+            <!-- Footer Widget Starts -->
+            <div class="footer-widget col-lg-4 col-md-6 col-xs-12 wow fadeIn" data-wow-delay=".2s">
+              <h3 class="small-title">
+                Links
+              </h3>
+              <ul class="menu">
+                <li><a href="#about">About Us</a></li>
+                <li><a href="/personal.html">Personal</a></li>
+                <li><a href="#services">Approach</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
+              </ul>
+            </div>
+            <!-- Footer Widget Ends -->
+  
+            <!-- Footer Widget Starts -->
+            <div class="footer-widget col-lg-4 col-md-6 col-xs-12 wow fadeIn" data-wow-delay=".5s">
+              <h3 class="small-title">
+                GALLERY
+              </h3>
+              <div class="plain-flicker-gallery">
+                <a href="#"><img src="img/flicker/img1.jpeg" alt=""></a>
+                <a href="#"><img src="img/flicker/img2.jpeg" alt=""></a>
+                <a href="#"><img src="img/flicker/img3.jpeg" alt=""></a>
+                <a href="#"><img src="img/flicker/img4.jpeg" alt=""></a>
+                <a href="#"><img src="img/flicker/img5.jpg" alt=""></a>
+                <a href="#"><img src="img/flicker/img6.jpeg" alt=""></a>
+              </div>
+            </div>
+            <!-- Footer Widget Ends -->
+  
+            <!-- Footer Widget Starts -->
+            <!-- <div class="footer-widget col-lg-3 col-md-6 col-xs-12 wow fadeIn" data-wow-delay=".8s">
+              <h3 class="small-title">
+                SUBSCRIBE US
+              </h3>
+              <div class="contact-us">
+                <form>
+                  <div class="form-group">
+                    <input type="text" class="form-control" id="exampleInputName2" placeholder="Enter your name">
+                  </div>
+                  <div class="form-group">
+                    <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Enter your email">
+                  </div>
+                  <button type="submit" class="btn btn-common">Submit</button>
+                </form>
+              </div>
+            </div> -->
+            <!-- Footer Widget Ends -->
+          </div>
+          <!-- Row Ends -->
         </div>
         <!-- Container Ends -->
-
+  
         <!-- Copyright -->
         <div id="copyright">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6 col-md-6 col-xs-12">
-                        <p class="copyright-text">All copyrights reserved © 2018
-                        </p>
-                    </div>
-                    <div class="col-lg-6 col-md-6 col-xs-12">
-                        <ul class="nav nav-inline  justify-content-end ">
-                            <li class="nav-item">
-                                <a class="nav-link active" href="/index.html">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/index.html">Sitemap</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/index.html">Privacy Policy</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/index.html">Terms of services</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-6 col-md-6 col-xs-12">
+                <p class="copyright-text">All copyrights reserved © <script>document.write(new Date().getFullYear())</script>
+                </p>
+              </div>
+              <div class="col-lg-6 col-md-6 col-xs-12">
+                <p class="design">
+                  Made with 
+                  <i class="fa fa-heart" style="color:red"></i> 
+                  by 
+                  <a href="https://olumideatewologun.com/">Atexzonate</a>
+                  
+                </p>
+              </div>
             </div>
+          </div>
         </div>
         <!-- Copyright  End-->
-
-    </footer>
-    <!-- Footer Section End-->
+  
+      </footer>
+      <!-- Footer Section End-->
 
     <!-- Go to Top Link -->
     <a href="#" class="back-to-top">
