--- a/reggio Emila.html
+++ b/reggio Emila.html
@@ -35,7 +35,7 @@
     <!-- Header Area wrapper Starts -->
     <header id="header-wrap">
         <!-- Navbar Start -->
-        <nav class="navbar navbar-expand-lg fixed-top scrolling-navbar indigo">
+        <nav class="navbar navbar-expand-lg fixed-top scrolling-navbar bg-dark">
             <div class="container">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
@@ -51,43 +51,8 @@
                 <div class="collapse navbar-collapse" id="main-navbar">
                     <ul class="navbar-nav mr-auto w-100 justify-content-end clearfix">
                         <li class="nav-item">
-                            <a class="nav-link" href="#sliders">
+                            <a class="nav-link" href="/index.html">
                                 Home
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#about">
-                                About
-                            </a>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#services">
-                                Approach
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#portfolio">
-                                Portfolio
-                            </a>
-                        </li>
-                        <!-- <li class="nav-item">
-                            <a class="nav-link" href="#feature">
-                                Features
-                            </a>
-                            </li> -->
-                        <li class="nav-item">
-                            <a class="nav-link" href="#team">
-                                Team
-                            </a>
-                        </li>
-                        <!-- <li class="nav-item">
-                            <a class="nav-link" href="#pricing">
-                                Pricing
-                            </a>
-                            </li> -->
-                        <li class="nav-item">
-                            <a class="nav-link" href="#contact">
-                                Contact
                             </a>
                         </li>
                     </ul>
@@ -97,45 +62,11 @@
             <!-- Mobile Menu Start -->
             <ul class="mobile-menu navbar-nav">
                 <li>
-                    <a class="page-scroll" href="#sliders">
+                    <a class="page-scroll" href="/index.html">
                         Home
                     </a>
                 </li>
-                <li>
-                    <a class="page-scroll" href="#about">
-                        About
-                    </a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="#services">
-                        Approach
-                    </a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="#portfolio">
-                        Portfolio
-                    </a>
-                </li>
-                <!-- <li>
-                        <a class="page-scroll" href="#feature">
-                            Features
-                        </a>
-                        </li> -->
-                <li>
-                    <a class="page-scroll" href="#team">
-                        Team
-                    </a>
-                </li>
-                <!-- <li>
-                        <a class="page-scroll" href="#pricing">
-                            Pricing
-                        </a>
-                        </li> -->
-                <li>
-                    <a class="page-scroll" href="#contact">
-                        Contact
-                    </a>
-                </li>
+                
             </ul>
             <!-- Mobile Menu End -->
 
