--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                 <i class="fa fa-cogs"></i>
               </div>
               <div class="service-content">
-                <a href="/reggioEmila.html">
+                <a href="/src/reggioEmila.html">
                   <h4>Reggio Emilia Approach</h4>
                   <p>
                     The Reggio Emilia approach is an instructive reasoning centering on preschool and essential instruction
@@ -255,7 +255,7 @@
                 <i class="fa fa-tachometer"></i>
               </div>
               <div class="service-content">
-                <a href="/waldorf.html">
+                <a href="waldorf.html">
                   <h4>Waldorf Education</h4>
                   <p>
                     Waldorf Education was established by Austrian born, Rudolf Steiner, who was a teacher, researcher and logician
@@ -273,7 +273,7 @@
                 <i class="fa fa-check"></i>
               </div>
               <div class="service-content">
-                <a href="/montessori.html">
+                <a href="/src/montessori.html">
                   <h4>Montessori Education</h4>
                   <p>
                   The Montessori classroom is ready with materials chosen and outlined to meet the wants of each person child.                </p>
