--- a/src/montessori.html
+++ b/src/montessori.html
@@ -51,7 +51,7 @@
                 <div class="collapse navbar-collapse" id="main-navbar">
                     <ul class="navbar-nav mr-auto w-100 justify-content-end clearfix">
                         <li class="nav-item">
-                            <a class="nav-link" href="/index.html">
+                            <a class="nav-link" href="index.html">
                                 Home
                             </a>
                         </li>
@@ -62,7 +62,7 @@
             <!-- Mobile Menu Start -->
             <ul class="mobile-menu navbar-nav">
                 <li>
-                    <a class="page-scroll" href="/index.html">
+                    <a class="page-scroll" href="index.html">
                         Home
                     </a>
                 </li>
@@ -198,7 +198,7 @@
                         </ol>
 
                     </p>
-                    <img src="img/testimonial/img6.jpg" alt="">
+                    <img src="/img/testimonial/img6.jpg" alt="">
 
                 </div>
                 <!-- End Service Icon 1 -->
@@ -280,12 +280,12 @@
                 GALLERY
               </h3>
               <div class="plain-flicker-gallery">
-                <a href="#"><img src="img/flicker/img1.jpeg" alt=""></a>
-                <a href="#"><img src="img/flicker/img2.jpeg" alt=""></a>
-                <a href="#"><img src="img/flicker/img3.jpeg" alt=""></a>
-                <a href="#"><img src="img/flicker/img4.jpeg" alt=""></a>
-                <a href="#"><img src="img/flicker/img5.jpg" alt=""></a>
-                <a href="#"><img src="img/flicker/img6.jpeg" alt=""></a>
+                <a href="#"><img src="/img/flicker/img1.jpeg" alt=""></a>
+                <a href="#"><img src="/img/flicker/img2.jpeg" alt=""></a>
+                <a href="#"><img src="/img/flicker/img3.jpeg" alt=""></a>
+                <a href="#"><img src="/img/flicker/img4.jpeg" alt=""></a>
+                <a href="#"><img src="/img/flicker/img5.jpg" alt=""></a>
+                <a href="#"><img src="/img/flicker/img6.jpeg" alt=""></a>
               </div>
             </div>
             <!-- Footer Widget Ends -->
