--- a/src/personal.html
+++ b/src/personal.html
@@ -51,7 +51,7 @@
                 <div class="collapse navbar-collapse" id="main-navbar">
                     <ul class="navbar-nav mr-auto w-100 justify-content-end clearfix">
                         <li class="nav-item">
-                            <a class="nav-link" href="/index.html">
+                            <a class="nav-link" href="index.html">
                                 Home
                             </a>
                         </li>
